# DelversChoice

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
DCServer/: CMakeLists.txt
DCServer/NetLayer/: CMakeLists.txt  Doxyfile  Makefile  extlibs  mkThesis.sh  runExample.sh
DCServer/NetLayer/docker/: cleanup.sh  httpdLog.sh  shell.sh  start.sh
DCServer/NetLayer/docker/db_image/: Dockerfile  create-mysql-structure.sh  initdb.sh
DCServer/NetLayer/include/NetLayer/: NetLayer.hpp
DCServer/NetLayer/include/NetLayer/Architecture/: Architecture.hpp  BusyFut.hpp  ManagedHost.hpp  ManagedPcktBuf.hpp  ManagedRecvBuf.hpp  ManagedSendBuf.hpp  Payload.hpp  ThreadSafeQueue.hpp
DCServer/NetLayer/include/NetLayer/Bound/: Bound.hpp  Config.hpp  ContextHost.hpp  DispatchTable.hpp  PcktBind.hpp  Settings.hpp
DCServer/NetLayer/include/NetLayer/Common/: Common.hpp  DebugLo.hpp  Deps.hpp  Typedefs.hpp
DCServer/NetLayer/include/NetLayer/PacketTypes/: PacketTypes.hpp  Pckt.hpp  Serialization.hpp
DCServer/NetLayer/include/NetLayer/Payload/: MkPayload.hpp  Payload.hpp  PayloadAddress.hpp  PayloadImpl.hpp  PayloadPrintOps.hpp  ScktUtils.hpp
DCServer/NetLayer/include/NetLayer/Pckt/: MakePckt.hpp  Pckt.hpp  PcktImpl.hpp  PcktMacros.hpp  PcktSerialiationOps.hpp  PcktStreamOps.hpp
DCServer/NetLayer/include/NetLayer/Serialization/: Serialization.hpp  SerializationInterface.hpp  SerializationOps.hpp
DCServer/NetLayer/include/NetLayer/Tunnel/: Fake.hpp  TCPListener.hpp  TCPListenerConn.hpp  TCPSckt.hpp  Tunnel.hpp  UDPSckt.hpp
DCServer/NetLayer/include/NetLayer/Utils/: CTBimap.hpp  MkUniqueLock.hpp  Retry.hpp  Serialization.hpp  SerializationOther.hpp
DCServer/NetLayer/sql/: ddl2cpp.py  ddl_definition.h  mkScript.sh  script.sql
DCServer/NetLayer/sql/parts/: 00_db.sql  10_tbl_user.sql  11_tbl_channel.sql  12_tbl_user_channel.sql  13_tbl_message.sql  99_initialize.sql
DCServer/NetLayer/src/: compile.sh  example_aliases.hpp  example_bind.hpp  example_client.hpp  example_db.hpp  example_db_actions.hpp  example_pckt_defs.hpp  example_server.hpp  example_utils.hpp  input_utils.hpp  main.cpp  test.cpp
DCServer/NetLayer/test/: CMakeLists.txt  debugLo.cpp  dispatch.cpp  managedPcktBuf.cpp  managed_host.cpp  nested_pckt.cpp  payload.cpp  payloadAddress.cpp  pckt.cpp  serialization.cpp  tsq.cpp  vector_pckt.cpp
DCServer/NetLayer/test/utils/: test_utils.hpp
DCServer/NetLayer/thesis/: annotated.tex  combined.lpp  combined.tex  dir_01750e6354d760fb51f5fc7812511df3.tex  dir_03227c8ef3dca66dae4941a0dd50cf57.tex  dir_0669a215a7c8a0246b49ea67d56bf5d3.tex  dir_19386f9ff5eb3ddfb4563a1a0f5a0616.tex  dir_24d87f2635402f0021920a919276c926.tex  dir_389f948da6acb2ad20460be5cc7af26a.tex  dir_3c3e2cfb6434ebfc3405fffd9b687128.tex  dir_3c83ee3a63ef706d417320eb2bca8588.tex  dir_4c9680b66d7b736c7ae01e3714d1f30f.tex  dir_4fef79e7177ba769987a8da36c892c5f.tex  dir_58e5ce0cbb0eeaa616844d1b2a2ebade.tex  dir_5bd71961b401a432086d0fb290a87f3f.tex  dir_6275f711559c7afc04a25216eb0bc594.tex  dir_63772b626f2709090f0bdca0f40827b4.tex  dir_650c4fc6162f2fa346c88a33654d392c.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_757d3204b8a6215d9cd97f5b97a781f4.tex  dir_791f06054567e9d6058c76db33d89cb8.tex  dir_7cd7548be87f4ee65034c087cadedca9.tex  dir_888743815598a837ca1a84752582068b.tex  dir_89b2dca8123aad5459b96ae1f8347fe9.tex  dir_8dac7ae7767b8f645f555a6886905264.tex  dir_a11c3c85f3b64995d6555c8150c899ea.tex  dir_a6ea953148483a7c147a4f93ab230cea.tex  dir_ad54881d9d2488b59f8b0bc999578a35.tex  dir_b38f78679c81fa9efc8d3ebf890340b9.tex  dir_bce4511b985d743986aba0ae2d619797.tex  dir_c2602996652048d09c898169cd577d02.tex  dir_d0e14840889e59be647d5b66a9b24beb.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_d8e9d0408293dd74dece1df4174e56a4.tex  dir_dce76d45d06f0608ce4c7c29108ccd3b.tex  dir_e2096563e83ecf06d031271cdbba2a3d.tex  dir_e2e12ecbd65d71bc80ec8c5c36a42110.tex  dir_e5ac89f9a89882d96b5a8cd01a22adca.tex  dir_e82b65ead97b9d539b6b07f8ff155545.tex  dir_f74b5faa23860cf4046412db5ea9e4da.tex  (+8 more)
DCServer/NetLayer/thesis/d0/d10/: DispatchTable_8hpp.tex
DCServer/NetLayer/thesis/d0/d20/: namespaceexample_1_1to__c.tex
DCServer/NetLayer/thesis/d0/d4e/: namespaceexample_1_1to__s.tex
DCServer/NetLayer/thesis/d0/d71/: classexample_1_1server__state.tex
DCServer/NetLayer/thesis/d0/d7b/: structexample__ddl_1_1TblUser___1_1Username_1_1__alias__t_1_1__member__t.tex
DCServer/NetLayer/thesis/d0/d91/: structexample__ddl_1_1TblUserChannel_1_1__alias__t.tex
DCServer/NetLayer/thesis/d0/da2/: Payload_8hpp.tex
DCServer/NetLayer/thesis/d0/dd6/: Architecture_8hpp.tex
DCServer/NetLayer/thesis/d1/d06/: structexample__ddl_1_1TblMessage___1_1Id_1_1__alias__t.tex
DCServer/NetLayer/thesis/d1/d15/: structexample__ddl_1_1TblUser___1_1Id_1_1__alias__t_1_1__member__t.tex
DCServer/NetLayer/thesis/d1/d17/: namespaceexample__ddl_1_1TblUserChannel__.tex
DCServer/NetLayer/thesis/d1/d1b/: structexample__ddl_1_1TblUser___1_1Username_1_1__alias__t.tex
DCServer/NetLayer/thesis/d1/d66/: structexample__ddl_1_1TblChannel___1_1Name.tex
DCServer/NetLayer/thesis/d1/d81/: structexample__ddl_1_1TblChannel.tex
DCServer/NetLayer/thesis/d1/dae/: structexample__ddl_1_1TblMessage___1_1IdChannel_1_1__alias__t_1_1__member__t.tex
DCServer/NetLayer/thesis/d1/de7/: structexample__ddl_1_1TblUserChannel___1_1IdUser_1_1__alias__t_1_1__member__t.tex
DCServer/NetLayer/thesis/d1/df7/: structexample__ddl_1_1TblChannel_1_1__alias__t.tex
DCServer/NetLayer/thesis/d2/d0f/: structexample__ddl_1_1TblMessage___1_1IdChannel_1_1__alias__t.tex
DCServer/NetLayer/thesis/d4/d3d/: payload_8hpp.tex
DCServer/NetLayer/thesis/parts/: 00_header.lpp  01_titlepage.lpp  02_tos.lpp  10_specification.lpp  20_technical.lpp  50_conclusion.lpp  60_example_app.lpp  90_references.lpp
DCServer/NetLayer/thesis/temp/: thesis.lpp
DCServer/src/: main.cpp
DCServer/test/dcs/: Cargo.toml
DCServer/test/dcs/src/: main.rs
(+212 files in other folders)
